--- a/common/artifacts/pom.xml
+++ b/common/artifacts/pom.xml
@@ -13,18 +13,18 @@
     <parent>
       <groupId>org.opendaylight.odlparent</groupId>
       <artifactId>odlparent-lite</artifactId>
-      <version>1.6.0-Beryllium</version>
+      <version>1.6.1-SNAPSHOT</version>
       <relativePath/>
     </parent>
 
     <groupId>org.opendaylight.yangtools</groupId>
     <artifactId>yangtools-artifacts</artifactId>
-    <version>0.8.0-Beryllium</version>
+    <version>0.8.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <properties>
         <!-- Model versions -->
-        <ietf.topology.version>2013.10.21.8-Beryllium</ietf.topology.version>
+        <ietf.topology.version>2013.10.21.8.1-SNAPSHOT</ietf.topology.version>
     </properties>
 
     <dependencyManagement>
