--- a/common/mockito-configuration/pom.xml
+++ b/common/mockito-configuration/pom.xml
@@ -12,7 +12,7 @@
     <parent>
         <groupId>org.opendaylight.yangtools</groupId>
         <artifactId>yangtools-parent</artifactId>
-        <version>0.8.0-Beryllium</version>
+        <version>0.8.1-SNAPSHOT</version>
         <relativePath>/../../common/parent/pom.xml</relativePath>
     </parent>
 
