--- a/common/parent/pom.xml
+++ b/common/parent/pom.xml
@@ -13,18 +13,18 @@
     <parent>
         <groupId>org.opendaylight.odlparent</groupId>
         <artifactId>odlparent</artifactId>
-        <version>1.6.0-Beryllium</version>
+        <version>1.6.1-SNAPSHOT</version>
         <relativePath></relativePath>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>yangtools-parent</artifactId>
     <groupId>org.opendaylight.yangtools</groupId>
-    <version>0.8.0-Beryllium</version>
+    <version>0.8.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <properties>
-        <yangtools.version>0.8.0-Beryllium</yangtools.version>
+        <yangtools.version>0.8.1-SNAPSHOT</yangtools.version>
 
         <!-- FIXME: these will be upstreamed -->
         <maven.depends.version>1.2</maven.depends.version>
@@ -277,7 +277,7 @@
                 <plugin>
                     <groupId>org.opendaylight.yangtools</groupId>
                     <artifactId>yang-maven-plugin</artifactId>
-                    <version>0.8.0-Beryllium</version>
+                    <version>0.8.1-SNAPSHOT</version>
                     <executions>
                         <execution>
                             <goals>
