--- a/yang-validation-tool/pom.xml
+++ b/yang-validation-tool/pom.xml
@@ -12,9 +12,11 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.opendaylight.yangtools</groupId>
-        <artifactId>yangtools-aggregator</artifactId>
+        <artifactId>yangtools-parent</artifactId>
         <version>1.0.0-SNAPSHOT</version>
+        <relativePath>../common/parent</relativePath>
     </parent>
+
     <artifactId>yang-validation-tool</artifactId>
 
     <dependencies>
@@ -37,6 +39,7 @@
             <artifactId>guava</artifactId>
         </dependency>
     </dependencies>
+
     <build>
         <plugins>
             <plugin>
