--- a/code-generator/binding-parent/pom.xml
+++ b/code-generator/binding-parent/pom.xml
@@ -12,18 +12,18 @@
     <parent>
         <groupId>org.opendaylight.odlparent</groupId>
         <artifactId>bundle-parent</artifactId>
-        <version>1.5.4-SNAPSHOT</version>
+        <version>1.5.4-Lithium-SR4</version>
         <relativePath/>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.opendaylight.yangtools</groupId>
     <artifactId>binding-parent</artifactId>
-    <version>0.7.4-SNAPSHOT</version>
+    <version>0.7.4-Lithium-SR4</version>
     <packaging>pom</packaging>
 
     <properties>
-        <yangtools.version>0.7.4-SNAPSHOT</yangtools.version>
+        <yangtools.version>0.7.4-Lithium-SR4</yangtools.version>
         <salGeneratorPath>src/main/yang-gen-sal</salGeneratorPath>
     </properties>
 
