--- a/code-generator/samples/maven-code-gen-sample/pom.xml
+++ b/code-generator/samples/maven-code-gen-sample/pom.xml
@@ -13,7 +13,7 @@
     <parent>
         <groupId>org.opendaylight.yangtools</groupId>
         <artifactId>binding-generator</artifactId>
-        <version>0.7.4-SNAPSHOT</version>
+        <version>0.7.4-Lithium-SR4</version>
     </parent>
     <artifactId>maven-code-gen-sample</artifactId>
 
