--- a/common/artifacts/pom.xml
+++ b/common/artifacts/pom.xml
@@ -12,12 +12,12 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.opendaylight.yangtools</groupId>
     <artifactId>yangtools-artifacts</artifactId>
-    <version>0.7.4-SNAPSHOT</version>
+    <version>0.7.4-Lithium-SR4</version>
     <packaging>pom</packaging>
 
     <properties>
         <!-- Model versions -->
-        <ietf.topology.version>2013.10.21.7.4-SNAPSHOT</ietf.topology.version>
+        <ietf.topology.version>2013.10.21.7.4-Lithium-SR4</ietf.topology.version>
     </properties>
 
     <dependencyManagement>
@@ -145,37 +145,37 @@
             <dependency>
                 <groupId>org.opendaylight.yangtools.model</groupId>
                 <artifactId>iana-afn-safi</artifactId>
-                <version>2013.07.04.7.4-SNAPSHOT</version>
+                <version>2013.07.04.7.4-Lithium-SR4</version>
             </dependency>
             <dependency>
                 <groupId>org.opendaylight.yangtools.model</groupId>
                 <artifactId>iana-if-type-2014-05-08</artifactId>
-                <version>2014.05.08.7.4-SNAPSHOT</version>
+                <version>2014.05.08.7.4-Lithium-SR4</version>
             </dependency>
             <dependency>
                 <groupId>org.opendaylight.yangtools.model</groupId>
                 <artifactId>ietf-inet-types</artifactId>
-                <version>2010.09.24.7.4-SNAPSHOT</version>
+                <version>2010.09.24.7.4-Lithium-SR4</version>
             </dependency>
             <dependency>
                 <groupId>org.opendaylight.yangtools.model</groupId>
                 <artifactId>ietf-yang-types</artifactId>
-                <version>2010.09.24.7.4-SNAPSHOT</version>
+                <version>2010.09.24.7.4-Lithium-SR4</version>
             </dependency>
             <dependency>
                 <groupId>org.opendaylight.yangtools.model</groupId>
                 <artifactId>ietf-yang-types-20130715</artifactId>
-                <version>2013.07.15.7.4-SNAPSHOT</version>
+                <version>2013.07.15.7.4-Lithium-SR4</version>
             </dependency>
             <dependency>
                 <groupId>org.opendaylight.yangtools.model</groupId>
                 <artifactId>ietf-interfaces</artifactId>
-                <version>2014.05.08.7.4-SNAPSHOT</version>
+                <version>2014.05.08.7.4-Lithium-SR4</version>
             </dependency>
             <dependency>
                 <groupId>org.opendaylight.yangtools.model</groupId>
                 <artifactId>ietf-restconf</artifactId>
-                <version>2013.10.19.7.4-SNAPSHOT</version>
+                <version>2013.10.19.7.4-Lithium-SR4</version>
             </dependency>
             <dependency>
                 <groupId>org.opendaylight.yangtools.model</groupId>
@@ -280,12 +280,12 @@
             <dependency>
                 <groupId>org.opendaylight.yangtools.model</groupId>
                 <artifactId>opendaylight-l2-types</artifactId>
-                <version>2013.08.27.7.4-SNAPSHOT</version>
+                <version>2013.08.27.7.4-Lithium-SR4</version>
             </dependency>
             <dependency>
                 <groupId>org.opendaylight.yangtools.model</groupId>
                 <artifactId>yang-ext</artifactId>
-                <version>2013.09.07.7.4-SNAPSHOT</version>
+                <version>2013.09.07.7.4-Lithium-SR4</version>
             </dependency>
             <dependency>
                 <groupId>org.opendaylight.yangtools</groupId>
