--- a/restconf/pom.xml
+++ b/restconf/pom.xml
@@ -10,7 +10,7 @@
     <parent>
         <groupId>org.opendaylight.yangtools</groupId>
         <artifactId>yangtools-parent</artifactId>
-        <version>0.7.4-SNAPSHOT</version>
+        <version>0.7.4-Lithium-SR4</version>
         <relativePath>../common/parent</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
