--- a/restconf/restconf-test-service/pom.xml
+++ b/restconf/restconf-test-service/pom.xml
@@ -14,7 +14,7 @@
     <parent>
         <groupId>org.opendaylight.yangtools</groupId>
         <artifactId>restconf-parent</artifactId>
-        <version>0.7.4-SNAPSHOT</version>
+        <version>0.7.4-Lithium-SR4</version>
     </parent>
 
     <artifactId>restconf-test-service</artifactId>
