--- a/code-generator/samples/modeling-sample/pom.xml
+++ b/code-generator/samples/modeling-sample/pom.xml
@@ -13,7 +13,7 @@
     <parent>
         <groupId>org.opendaylight.yangtools</groupId>
         <artifactId>binding-generator</artifactId>
-        <version>0.7.4-Lithium-SR4</version>
+        <version>0.7.5-SNAPSHOT</version>
     </parent>
     <artifactId>modeling-sample</artifactId>
 
