--- a/common/features/pom.xml
+++ b/common/features/pom.xml
@@ -12,13 +12,13 @@
     <parent>
         <groupId>org.opendaylight.odlparent</groupId>
         <artifactId>features-parent</artifactId>
-        <version>1.5.4-Lithium-SR4</version>
+        <version>1.5.5-SNAPSHOT</version>
         <relativePath/>
     </parent>
 
     <groupId>org.opendaylight.yangtools</groupId>
     <artifactId>features-yangtools</artifactId>
-    <version>0.7.4-Lithium-SR4</version>
+    <version>0.7.5-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <dependencyManagement>
