--- a/integration-test/regression-test-model/pom.xml
+++ b/integration-test/regression-test-model/pom.xml
@@ -9,7 +9,7 @@
 
     <parent>
         <groupId>org.opendaylight.yangtools</groupId>
-        <version>0.7.4-Lithium-SR4</version>
+        <version>0.7.5-SNAPSHOT</version>
         <artifactId>yangtools-parent</artifactId>
         <relativePath>/../../common/parent/pom.xml</relativePath>
     </parent>
