--- a/model/iana/pom.xml
+++ b/model/iana/pom.xml
@@ -12,7 +12,7 @@
     <parent>
         <artifactId>model-parent</artifactId>
         <groupId>org.opendaylight.yangtools.model</groupId>
-        <version>0.7.4-Lithium-SR4</version>
+        <version>0.7.5-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
