--- a/model/ietf/ietf-topology/pom.xml
+++ b/model/ietf/ietf-topology/pom.xml
@@ -12,11 +12,11 @@
     <parent>
         <artifactId>model-ietf</artifactId>
         <groupId>org.opendaylight.yangtools.model</groupId>
-        <version>0.7.4-Lithium-SR4</version>
+        <version>0.7.5-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>ietf-topology</artifactId>
-    <version>2013.10.21.7.4-Lithium-SR4</version>
+    <version>2013.10.21.7.5-SNAPSHOT</version>
     <name>${project.artifactId}</name>
     <description>${project.artifactId}</description>
 
