--- a/yang/yang-model-parent/pom.xml
+++ b/yang/yang-model-parent/pom.xml
@@ -13,7 +13,7 @@
     <parent>
         <groupId>org.opendaylight.odlparent</groupId>
         <artifactId>bundle-parent</artifactId>
-        <version>1.5.4-Lithium-SR4</version>
+        <version>1.5.5-SNAPSHOT</version>
         <relativePath/>
     </parent>
 
@@ -21,10 +21,10 @@
     <groupId>org.opendaylight.yangtools</groupId>
     <artifactId>yang-model-parent</artifactId>
     <packaging>pom</packaging>
-    <version>0.7.4-Lithium-SR4</version>
+    <version>0.7.5-SNAPSHOT</version>
 
     <properties>
-        <yangtools.version>0.7.4-Lithium-SR4</yangtools.version>
+        <yangtools.version>0.7.5-SNAPSHOT</yangtools.version>
     </properties>
 
     <dependencyManagement>
