--- a/yang/yang-data-jaxen/pom.xml
+++ b/yang/yang-data-jaxen/pom.xml
@@ -13,7 +13,7 @@
     <parent>
         <groupId>org.opendaylight.yangtools</groupId>
         <artifactId>yangtools-parent</artifactId>
-        <version>0.8.1-SNAPSHOT</version>
+        <version>0.8.1-Beryllium-SR1</version>
         <relativePath>/../../common/parent/pom.xml</relativePath>
     </parent>
 
