--- a/common/pom.xml
+++ b/common/pom.xml
@@ -12,7 +12,7 @@
     <parent>
       <groupId>org.opendaylight.yangtools</groupId>
       <artifactId>yangtools-parent</artifactId>
-      <version>0.8.1-Beryllium-SR1</version>
+      <version>0.8.2-SNAPSHOT</version>
       <relativePath>parent</relativePath>
     </parent>
 
