--- a/websocket/pom.xml
+++ b/websocket/pom.xml
@@ -13,7 +13,7 @@
     <parent>
       <groupId>org.opendaylight.yangtools</groupId>
       <artifactId>yangtools-parent</artifactId>
-      <version>0.8.1-Beryllium-SR1</version>
+      <version>0.8.2-SNAPSHOT</version>
       <relativePath>../common/parent</relativePath>
     </parent>
 
