--- a/yang/pom.xml
+++ b/yang/pom.xml
@@ -27,6 +27,7 @@
         <module>yang-data-impl</module>
         <module>yang-data-transform</module>
         <module>yang-data-codec-gson</module>
+        <module>yang-data-codec-xml</module>
         <module>yang-model-api</module>
         <module>yang-maven-plugin</module>
         <module>yang-maven-plugin-it</module>
