Fixed Eclipse workspace red broken build due to missing ANTLR gen. src
build-helper-maven-plugin plugin declaration is needed for
target/generated-sources/parser to be added as a source folder.

Change-Id: Ie2819ea3c65f8b5a0d34cca787fb57a498ad3238
Signed-off-by: Michael Vorburger <vorburger@redhat.com>

--- a/yang/yang-parser-impl/pom.xml
+++ b/yang/yang-parser-impl/pom.xml
@@ -110,6 +110,10 @@
                     </instructions>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>build-helper-maven-plugin</artifactId>
+            </plugin>
         </plugins>
         <pluginManagement>
             <plugins>
