--- a/yang-validation-tool/pom.xml
+++ b/yang-validation-tool/pom.xml
@@ -13,7 +13,7 @@
     <parent>
         <groupId>org.opendaylight.yangtools</groupId>
         <artifactId>yangtools-aggregator</artifactId>
-        <version>0.8.2-SNAPSHOT</version>
+        <version>0.8.2-Beryllium-SR2</version>
     </parent>
     <artifactId>yang-validation-tool</artifactId>
 
