--- a/yang/pom.xml
+++ b/yang/pom.xml
@@ -12,7 +12,7 @@
     <parent>
       <groupId>org.opendaylight.yangtools</groupId>
       <artifactId>yangtools-parent</artifactId>
-      <version>0.8.2-Beryllium-SR2</version>
+      <version>0.8.3-SNAPSHOT</version>
       <relativePath>../common/parent</relativePath>
     </parent>
 
