--- a/features/odl-yangtools-common/pom.xml
+++ b/features/odl-yangtools-common/pom.xml
@@ -14,7 +14,7 @@
     <parent>
         <groupId>org.opendaylight.odlparent</groupId>
         <artifactId>single-feature-parent</artifactId>
-        <version>2.0.5</version>
+        <version>3.0.0-SNAPSHOT</version>
         <relativePath/>
     </parent>
 
@@ -30,7 +30,7 @@
             <dependency>
                 <groupId>org.opendaylight.odlparent</groupId>
                 <artifactId>odlparent-artifacts</artifactId>
-                <version>2.0.5</version>
+                <version>3.0.0-SNAPSHOT</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -47,8 +47,8 @@
     <dependencies>
         <dependency>
             <groupId>org.opendaylight.odlparent</groupId>
-            <artifactId>odl-guava-22</artifactId>
-            <version>2.0.5</version>
+            <artifactId>odl-guava-23</artifactId>
+            <version>3.0.0-SNAPSHOT</version>
             <type>xml</type>
             <classifier>features</classifier>
         </dependency>
@@ -71,6 +71,10 @@
         <dependency>
             <groupId>org.opendaylight.yangtools</groupId>
             <artifactId>triemap</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.opendaylight.odlparent</groupId>
+            <artifactId>karaf.branding</artifactId>
         </dependency>
     </dependencies>
 
