--- a/common/artifacts/pom.xml
+++ b/common/artifacts/pom.xml
@@ -111,6 +111,11 @@
             </dependency>
             <dependency>
                 <groupId>org.opendaylight.yangtools</groupId>
+                <artifactId>yang-parser-reactor</artifactId>
+                <version>2.0.0-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>org.opendaylight.yangtools</groupId>
                 <artifactId>yang-parser-impl</artifactId>
                 <version>2.0.0-SNAPSHOT</version>
             </dependency>
