--- a/yang/pom.xml
+++ b/yang/pom.xml
@@ -39,6 +39,7 @@
         <module>yang-model-util</module>
         <module>yang-parser-api</module>
         <module>yang-parser-spi</module>
+        <module>yang-parser-reactor</module>
         <module>yang-parser-impl</module>
         <module>yang-data-jaxen</module>
         <module>yang-model-validator</module>
