--- a/yang/pom.xml
+++ b/yang/pom.xml
@@ -44,6 +44,11 @@
         <module>yang-data-jaxen</module>
         <module>yang-model-validator</module>
         <module>yang-test-util</module>
+
+        <module>rfc8040-model-api</module>
+        <!-- FIXME: solve circular dependency with rfc6020 and activate this
+            <module>rfc8040-parser</module>
+        -->
     </modules>
 
     <!--
