--- a/yang/pom.xml
+++ b/yang/pom.xml
@@ -45,13 +45,17 @@
         <module>yang-model-validator</module>
         <module>yang-test-util</module>
 
+        <!-- NACM metamodel support -->
+        <module>rfc6536-model-api</module>
+        <module>rfc6536-parser-support</module>
+
         <!-- Metadata (annotation) metamodel support -->
         <module>rfc7952-model-api</module>
         <module>rfc7952-parser-support</module>
 
         <module>rfc8040-model-api</module>
         <!-- FIXME: solve circular dependency with rfc6020 and activate this
-            <module>rfc8040-parser</module>
+            <module>rfc8040-parser-support</module>
         -->
     </modules>
 
