--- a/common/artifacts/pom.xml
+++ b/common/artifacts/pom.xml
@@ -138,6 +138,17 @@
 
             <dependency>
                 <groupId>org.opendaylight.yangtools</groupId>
+                <artifactId>rfc6536-model-api</artifactId>
+                <version>2.0.0-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>org.opendaylight.yangtools</groupId>
+                <artifactId>rfc6536-parser-support</artifactId>
+                <version>2.0.0-SNAPSHOT</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.opendaylight.yangtools</groupId>
                 <artifactId>rfc8040-model-api</artifactId>
                 <version>2.0.0-SNAPSHOT</version>
             </dependency>
