Add support for RFC6536 extensions
This patch adds support for parsing RFC6536 extensions and related
concepts for end users.

Change-Id: I41ae3192b74660be409c63bbec82a1a14c7de4af
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>

--- a/features/odl-yangtools-parser-api/pom.xml
+++ b/features/odl-yangtools-parser-api/pom.xml
@@ -54,6 +54,10 @@
         </dependency>
         <dependency>
             <groupId>org.opendaylight.yangtools</groupId>
+            <artifactId>rfc6536-model-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.opendaylight.yangtools</groupId>
             <artifactId>rfc7952-model-api</artifactId>
         </dependency>
         <dependency>
