--- a/yang/yang-parser-impl/pom.xml
+++ b/yang/yang-parser-impl/pom.xml
@@ -87,6 +87,14 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>rfc6536-model-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>rfc6536-parser-support</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>rfc7952-model-api</artifactId>
         </dependency>
         <dependency>
