Add support for RFC7952 extensions
This patch adds support for md:annotation statement.

Change-Id: I912645c0e01662594346e107766dd86f704f0cca
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>

--- a/yang/pom.xml
+++ b/yang/pom.xml
@@ -45,6 +45,10 @@
         <module>yang-model-validator</module>
         <module>yang-test-util</module>
 
+        <!-- Metadata (annotation) metamodel support -->
+        <module>rfc7952-model-api</module>
+        <module>rfc7952-parser-support</module>
+
         <module>rfc8040-model-api</module>
         <!-- FIXME: solve circular dependency with rfc6020 and activate this
             <module>rfc8040-parser</module>
