Modify access rules

--- a/project.config
+++ b/project.config
@@ -39,3 +39,5 @@
 [submit]
 	mergeContent = false
 	action = rebase if necessary
+[access "refs/heads/v1.2.x"]
+	submit = block group Registered Users
