--- a/common/artifacts/pom.xml
+++ b/common/artifacts/pom.xml
@@ -144,6 +144,12 @@
 
             <dependency>
                 <groupId>org.opendaylight.yangtools</groupId>
+                <artifactId>openconfig-model-api</artifactId>
+                <version>2.0.0-SNAPSHOT</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.opendaylight.yangtools</groupId>
                 <artifactId>rfc7952-model-api</artifactId>
                 <version>2.0.0-SNAPSHOT</version>
             </dependency>
