--- a/yang/pom.xml
+++ b/yang/pom.xml
@@ -45,6 +45,9 @@
         <module>yang-model-validator</module>
         <module>yang-test-util</module>
 
+        <!-- OpenConfig (semantic version) metamodel support -->
+        <module>openconfig-model-api</module>
+
         <!-- OpenDaylight messy extensions -->
         <module>odlext-model-api</module>
 
