YANGTOOLS-829: Wire extension support into default reactor
Since we have reorganized, we can now safely pull in extension
supports into DefaultReactors without causing dependency cycles.

Change-Id: I6214ec374ba2320aa7fe20c436749a3df4732a57
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>

--- a/yang/openconfig-parser-support/pom.xml
+++ b/yang/openconfig-parser-support/pom.xml
@@ -48,14 +48,12 @@
 
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>rfc7952-model-api</artifactId>
+            <artifactId>openconfig-model-api</artifactId>
         </dependency>
 
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <!-- FIXME: this needs to be trimmed down to the point of requiring only yang-parser-spi
-                        and yang-parser-reactor -->
-            <artifactId>yang-parser-impl</artifactId>
+            <artifactId>yang-parser-rfc7950</artifactId>
         </dependency>
     </dependencies>
 
