--- a/common/artifacts/pom.xml
+++ b/common/artifacts/pom.xml
@@ -174,6 +174,11 @@
                 <artifactId>rfc8040-model-api</artifactId>
                 <version>2.0.0-SNAPSHOT</version>
             </dependency>
+            <dependency>
+                <groupId>org.opendaylight.yangtools</groupId>
+                <artifactId>rfc8040-parser-support</artifactId>
+                <version>2.0.0-SNAPSHOT</version>
+            </dependency>
 
             <dependency>
                 <groupId>org.opendaylight.yangtools</groupId>
