--- a/common/artifacts/pom.xml
+++ b/common/artifacts/pom.xml
@@ -146,6 +146,11 @@
                 <artifactId>odlext-model-api</artifactId>
                 <version>2.0.0-SNAPSHOT</version>
             </dependency>
+            <dependency>
+                <groupId>org.opendaylight.yangtools</groupId>
+                <artifactId>odlext-parser-support</artifactId>
+                <version>2.0.0-SNAPSHOT</version>
+            </dependency>
 
             <dependency>
                 <groupId>org.opendaylight.yangtools</groupId>
