--- a/yang/pom.xml
+++ b/yang/pom.xml
@@ -64,6 +64,7 @@
 
         <!-- OpenDaylight messy extensions -->
         <module>odlext-model-api</module>
+        <module>odlext-parser-support</module>
 
         <!-- Metadata (annotation) metamodel support -->
         <module>rfc7952-model-api</module>
