Eliminate unneeded dependencies
yang-parser-reactor does not need yang-data-util.

Change-Id: Ie97992c4415509206e72556d49a446e48f5d5028
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>

--- a/yang/yang-parser-reactor/pom.xml
+++ b/yang/yang-parser-reactor/pom.xml
@@ -61,10 +61,10 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>yang-model-util</artifactId>
         </dependency>
-        <dependency>
+        <!--dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>yang-data-util</artifactId>
-        </dependency>
+        </dependency-->
         <dependency>
             <groupId>org.antlr</groupId>
             <artifactId>antlr4-runtime</artifactId>
