--- a/features/odl-triemap/pom.xml
+++ b/features/odl-triemap/pom.xml
@@ -19,18 +19,18 @@
     </parent>
 
     <groupId>org.opendaylight.yangtools</groupId>
-    <artifactId>odl-yangtools-common</artifactId>
-    <version>2.0.0-SNAPSHOT</version>
+    <artifactId>odl-triemap</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
     <packaging>feature</packaging>
-    <name>OpenDaylight :: Yangtools :: Common definitions</name>
-    <description>Common YANG-related definitions</description>
+    <name>OpenDaylight :: Yangtools :: TrieMap</name>
+    <description>Concurrent hash-trie implementation</description>
 
     <dependencyManagement>
         <dependencies>
             <dependency>
                 <groupId>org.opendaylight.yangtools</groupId>
                 <artifactId>yangtools-artifacts</artifactId>
-                <version>${project.version}</version>
+                <version>2.0.0-SNAPSHOT</version>
                 <scope>import</scope>
                 <type>pom</type>
             </dependency>
@@ -39,14 +39,15 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.opendaylight.yangtools</groupId>
-            <artifactId>odl-yangtools-util</artifactId>
+            <groupId>org.opendaylight.odlparent</groupId>
+            <artifactId>odl-guava-22</artifactId>
+            <version>2.0.5</version>
             <type>xml</type>
             <classifier>features</classifier>
         </dependency>
         <dependency>
             <groupId>org.opendaylight.yangtools</groupId>
-            <artifactId>yang-common</artifactId>
+            <artifactId>triemap</artifactId>
         </dependency>
     </dependencies>
 </project>
