--- a/features/odl-yangtools-export/pom.xml
+++ b/features/odl-yangtools-export/pom.xml
@@ -19,11 +19,11 @@
     </parent>
 
     <groupId>org.opendaylight.yangtools</groupId>
-    <artifactId>odl-yangtools-yang-parser</artifactId>
+    <artifactId>odl-yangtools-export</artifactId>
     <version>2.0.0-SNAPSHOT</version>
     <packaging>feature</packaging>
-
-    <name>OpenDaylight :: Yangtools :: YANG Parser</name>
+    <name>OpenDaylight :: Yangtools :: Export</name>
+    <description>YANG model export</description>
 
     <dependencyManagement>
         <dependencies>
@@ -31,8 +31,8 @@
                 <groupId>org.opendaylight.yangtools</groupId>
                 <artifactId>yangtools-artifacts</artifactId>
                 <version>${project.version}</version>
-                <type>pom</type>
                 <scope>import</scope>
+                <type>pom</type>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -40,34 +40,13 @@
     <dependencies>
         <dependency>
             <groupId>org.opendaylight.yangtools</groupId>
-            <artifactId>odl-yangtools-common</artifactId>
+            <artifactId>odl-yangtools-parser-api</artifactId>
             <type>xml</type>
             <classifier>features</classifier>
-        </dependency>
-        <dependency>
-            <groupId>org.opendaylight.yangtools</groupId>
-            <artifactId>yang-parser-impl</artifactId>
         </dependency>
         <dependency>
             <groupId>org.opendaylight.yangtools</groupId>
             <artifactId>yang-model-export</artifactId>
         </dependency>
     </dependencies>
-
-    <!--
-        Maven Site Configuration
-
-        The following configuration is necessary for maven-site-plugin to
-        correctly identify the correct deployment path for OpenDaylight Maven
-        sites.
-    -->
-    <url>${odl.site.url}/${project.groupId}/${stream}/${project.artifactId}/</url>
-
-    <distributionManagement>
-        <site>
-            <id>opendaylight-site</id>
-            <url>${nexus.site.url}/${project.artifactId}/</url>
-        </site>
-    </distributionManagement>
-
 </project>
