--- a/features/odl-yangtools-xpath/pom.xml
+++ b/features/odl-yangtools-xpath/pom.xml
@@ -19,11 +19,11 @@
     </parent>
 
     <groupId>org.opendaylight.yangtools</groupId>
-    <artifactId>odl-yangtools-common</artifactId>
+    <artifactId>odl-yangtools-xpath</artifactId>
     <version>2.0.0-SNAPSHOT</version>
     <packaging>feature</packaging>
-    <name>OpenDaylight :: Yangtools :: Common definitions</name>
-    <description>Common YANG-related definitions</description>
+    <name>OpenDaylight :: Yangtools :: XPath support</name>
+    <description>XPath support for YANG-modeled data</description>
 
     <dependencyManagement>
         <dependencies>
@@ -40,13 +40,13 @@
     <dependencies>
         <dependency>
             <groupId>org.opendaylight.yangtools</groupId>
-            <artifactId>odl-yangtools-util</artifactId>
+            <artifactId>odl-yangtools-data-api</artifactId>
             <type>xml</type>
             <classifier>features</classifier>
         </dependency>
         <dependency>
             <groupId>org.opendaylight.yangtools</groupId>
-            <artifactId>yang-common</artifactId>
+            <artifactId>yang-data-jaxen</artifactId>
         </dependency>
     </dependencies>
 </project>
