--- a/features/features-yangtools-experimental/pom.xml
+++ b/features/features-yangtools-experimental/pom.xml
@@ -13,17 +13,17 @@
 
     <parent>
         <groupId>org.opendaylight.odlparent</groupId>
-        <artifactId>single-feature-parent</artifactId>
+        <artifactId>feature-repo-parent</artifactId>
         <version>2.0.5</version>
         <relativePath/>
     </parent>
 
     <groupId>org.opendaylight.yangtools</groupId>
-    <artifactId>odl-yangtools-common</artifactId>
+    <artifactId>features-yangtools</artifactId>
     <version>2.0.0-SNAPSHOT</version>
     <packaging>feature</packaging>
-    <name>OpenDaylight :: Yangtools :: Common definitions</name>
-    <description>Common YANG-related definitions</description>
+    <name>OpenDaylight :: Yangtools :: Experimental Features</name>
+    <description>YANG Tools Experimental Features</description>
 
     <dependencyManagement>
         <dependencies>
@@ -40,13 +40,9 @@
     <dependencies>
         <dependency>
             <groupId>org.opendaylight.yangtools</groupId>
-            <artifactId>odl-yangtools-util</artifactId>
-            <type>xml</type>
+            <artifactId></artifactId>
             <classifier>features</classifier>
-        </dependency>
-        <dependency>
-            <groupId>org.opendaylight.yangtools</groupId>
-            <artifactId>yang-common</artifactId>
+            <type>xml</type>
         </dependency>
     </dependencies>
 </project>
