--- a/features/odl-yangtools-export/pom.xml
+++ b/features/odl-yangtools-export/pom.xml
@@ -19,11 +19,11 @@
     </parent>
 
     <groupId>org.opendaylight.yangtools</groupId>
-    <artifactId>odl-yangtools-common</artifactId>
+    <artifactId>odl-yangtools-export</artifactId>
     <version>2.0.0-SNAPSHOT</version>
     <packaging>feature</packaging>
-    <name>OpenDaylight :: Yangtools :: Common definitions</name>
-    <description>Common YANG-related definitions</description>
+    <name>OpenDaylight :: Yangtools :: Export</name>
+    <description>YANG model export</description>
 
     <dependencyManagement>
         <dependencies>
@@ -40,13 +40,13 @@
     <dependencies>
         <dependency>
             <groupId>org.opendaylight.yangtools</groupId>
-            <artifactId>odl-yangtools-util</artifactId>
+            <artifactId>odl-yangtools-parser-api</artifactId>
             <type>xml</type>
             <classifier>features</classifier>
         </dependency>
         <dependency>
             <groupId>org.opendaylight.yangtools</groupId>
-            <artifactId>yang-common</artifactId>
+            <artifactId>yang-model-export</artifactId>
         </dependency>
     </dependencies>
 </project>
