--- a/features/odl-yangtools-parser-api/pom.xml
+++ b/features/odl-yangtools-parser-api/pom.xml
@@ -13,17 +13,17 @@
 
     <parent>
         <groupId>org.opendaylight.odlparent</groupId>
-        <artifactId>feature-repo-parent</artifactId>
+        <artifactId>single-feature-parent</artifactId>
         <version>2.0.5</version>
         <relativePath/>
     </parent>
 
     <groupId>org.opendaylight.yangtools</groupId>
-    <artifactId>features-yangtools</artifactId>
+    <artifactId>odl-yangtools-parser-api</artifactId>
     <version>2.0.0-SNAPSHOT</version>
     <packaging>feature</packaging>
-    <name>OpenDaylight :: Yangtools :: Stable Features</name>
-    <description>YANG Tools Stable Features</description>
+    <name>OpenDaylight :: Yangtools :: Parser API</name>
+    <description>YANG metamodel and parser APIs</description>
 
     <dependencyManagement>
         <dependencies>
@@ -40,69 +40,37 @@
     <dependencies>
         <dependency>
             <groupId>org.opendaylight.yangtools</groupId>
-            <artifactId>odl-triemap</artifactId>
-            <classifier>features</classifier>
-            <type>xml</type>
-        </dependency>
-        <dependency>
-            <groupId>org.opendaylight.yangtools</groupId>
-            <artifactId>odl-yangtools-codec-json</artifactId>
-            <classifier>features</classifier>
-            <type>xml</type>
-        </dependency>
-        <dependency>
-            <groupId>org.opendaylight.yangtools</groupId>
-            <artifactId>odl-yangtools-codec-xml</artifactId>
-            <classifier>features</classifier>
-            <type>xml</type>
-        </dependency>
-        <dependency>
-            <groupId>org.opendaylight.yangtools</groupId>
             <artifactId>odl-yangtools-common</artifactId>
-            <classifier>features</classifier>
             <type>xml</type>
+            <classifier>features</classifier>
         </dependency>
         <dependency>
             <groupId>org.opendaylight.yangtools</groupId>
-            <artifactId>odl-yangtools-data-api</artifactId>
-            <classifier>features</classifier>
-            <type>xml</type>
+            <artifactId>odlext-model-api</artifactId>
         </dependency>
         <dependency>
             <groupId>org.opendaylight.yangtools</groupId>
-            <artifactId>odl-yangtools-data</artifactId>
-            <classifier>features</classifier>
-            <type>xml</type>
+            <artifactId>openconfig-model-api</artifactId>
         </dependency>
         <dependency>
             <groupId>org.opendaylight.yangtools</groupId>
-            <artifactId>odl-yangtools-export</artifactId>
-            <classifier>features</classifier>
-            <type>xml</type>
+            <artifactId>rfc7952-model-api</artifactId>
         </dependency>
         <dependency>
             <groupId>org.opendaylight.yangtools</groupId>
-            <artifactId>odl-yangtools-parser-api</artifactId>
-            <classifier>features</classifier>
-            <type>xml</type>
+            <artifactId>rfc8040-model-api</artifactId>
         </dependency>
         <dependency>
             <groupId>org.opendaylight.yangtools</groupId>
-            <artifactId>odl-yangtools-parser</artifactId>
-            <classifier>features</classifier>
-            <type>xml</type>
+            <artifactId>yang-model-api</artifactId>
         </dependency>
         <dependency>
             <groupId>org.opendaylight.yangtools</groupId>
-            <artifactId>odl-yangtools-util</artifactId>
-            <classifier>features</classifier>
-            <type>xml</type>
+            <artifactId>yang-model-util</artifactId>
         </dependency>
         <dependency>
             <groupId>org.opendaylight.yangtools</groupId>
-            <artifactId>odl-yangtools-xpath</artifactId>
-            <classifier>features</classifier>
-            <type>xml</type>
+            <artifactId>yang-parser-api</artifactId>
         </dependency>
     </dependencies>
 </project>
