--- a/features/odl-yangtools-xpath/pom.xml
+++ b/features/odl-yangtools-xpath/pom.xml
@@ -19,11 +19,11 @@
     </parent>
 
     <groupId>org.opendaylight.yangtools</groupId>
-    <artifactId>odl-yangtools-yang-data</artifactId>
+    <artifactId>odl-yangtools-data</artifactId>
     <version>2.0.0-SNAPSHOT</version>
     <packaging>feature</packaging>
-
-    <name>OpenDaylight :: Yangtools :: Data Binding</name>
+    <name>OpenDaylight :: Yangtools :: XPath support</name>
+    <description>XPath support for YANG-modeled data</description>
 
     <dependencyManagement>
         <dependencies>
@@ -40,34 +40,13 @@
     <dependencies>
         <dependency>
             <groupId>org.opendaylight.yangtools</groupId>
-            <artifactId>odl-yangtools-yang-parser</artifactId>
+            <artifactId>odl-yangtools-data-api</artifactId>
             <type>xml</type>
             <classifier>features</classifier>
         </dependency>
         <dependency>
             <groupId>org.opendaylight.yangtools</groupId>
-            <artifactId>yang-data-codec-gson</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.opendaylight.yangtools</groupId>
-            <artifactId>yang-data-codec-xml</artifactId>
+            <artifactId>yang-data-jaxen</artifactId>
         </dependency>
     </dependencies>
-
-    <!--
-        Maven Site Configuration
-
-        The following configuration is necessary for maven-site-plugin to
-        correctly identify the correct deployment path for OpenDaylight Maven
-        sites.
-    -->
-    <url>${odl.site.url}/${project.groupId}/${stream}/${project.artifactId}/</url>
-
-    <distributionManagement>
-        <site>
-            <id>opendaylight-site</id>
-            <url>${nexus.site.url}/${project.artifactId}/</url>
-        </site>
-    </distributionManagement>
-
 </project>
