--- a/features/features-yangtools-experimental/pom.xml
+++ b/features/features-yangtools-experimental/pom.xml
@@ -13,17 +13,17 @@
 
     <parent>
         <groupId>org.opendaylight.odlparent</groupId>
-        <artifactId>single-feature-parent</artifactId>
+        <artifactId>feature-repo-parent</artifactId>
         <version>2.0.5</version>
         <relativePath/>
     </parent>
 
     <groupId>org.opendaylight.yangtools</groupId>
-    <artifactId>odl-yangtools-yang-data</artifactId>
+    <artifactId>features-yangtools</artifactId>
     <version>2.0.0-SNAPSHOT</version>
     <packaging>feature</packaging>
-
-    <name>OpenDaylight :: Yangtools :: Data Binding</name>
+    <name>OpenDaylight :: Yangtools :: Experimental Features</name>
+    <description>YANG Tools Experimental Features</description>
 
     <dependencyManagement>
         <dependencies>
@@ -40,34 +40,15 @@
     <dependencies>
         <dependency>
             <groupId>org.opendaylight.yangtools</groupId>
-            <artifactId>odl-yangtools-yang-parser</artifactId>
-            <type>xml</type>
+            <artifactId>features-yangtools</artifactId>
             <classifier>features</classifier>
+            <type>xml</type>
         </dependency>
         <dependency>
             <groupId>org.opendaylight.yangtools</groupId>
-            <artifactId>yang-data-codec-gson</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.opendaylight.yangtools</groupId>
-            <artifactId>yang-data-codec-xml</artifactId>
+            <artifactId>odl-exp-objcache</artifactId>
+            <classifier>features</classifier>
+            <type>xml</type>
         </dependency>
     </dependencies>
-
-    <!--
-        Maven Site Configuration
-
-        The following configuration is necessary for maven-site-plugin to
-        correctly identify the correct deployment path for OpenDaylight Maven
-        sites.
-    -->
-    <url>${odl.site.url}/${project.groupId}/${stream}/${project.artifactId}/</url>
-
-    <distributionManagement>
-        <site>
-            <id>opendaylight-site</id>
-            <url>${nexus.site.url}/${project.artifactId}/</url>
-        </site>
-    </distributionManagement>
-
 </project>
