--- a/features/odl-exp-objcache/pom.xml
+++ b/features/odl-exp-objcache/pom.xml
@@ -22,8 +22,7 @@
     <artifactId>odl-yangtools-common</artifactId>
     <version>2.0.0-SNAPSHOT</version>
     <packaging>feature</packaging>
-    <name>OpenDaylight :: Yangtools :: Common definitions</name>
-    <description>Common YANG-related definitions</description>
+    <name>OpenDaylight :: Yangtools :: Experimental :: Object Cache</name>
 
     <dependencyManagement>
         <dependencies>
@@ -39,14 +38,14 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.opendaylight.yangtools</groupId>
+            <groupId>org.opendaylight.odlparent</groupId>
             <artifactId>odl-yangtools-util</artifactId>
             <type>xml</type>
             <classifier>features</classifier>
         </dependency>
         <dependency>
             <groupId>org.opendaylight.yangtools</groupId>
-            <artifactId>yang-common</artifactId>
+            <artifactId>object-cache-guava</artifactId>
         </dependency>
     </dependencies>
 </project>
